bot nav v2? merge connected foothold into region