@@ -4,17 +4,13 @@ import server.maps.Foothold;
 import server.maps.MapleMap;
 
 import java.awt.*;
-import java.io.Serial;
 import java.io.Serializable;
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
 final class BotNavigationGraph implements Serializable {
-    @Serial
-    private static final long serialVersionUID = 1L;
-
     enum EdgeType {
         WALK,
         JUMP,
@@ -25,70 +21,128 @@ final class BotNavigationGraph implements Serializable {
         TELEPORT
     }
 
-    static final class Region implements Serializable {
-        @Serial
-        private static final long serialVersionUID = 1L;
-
-        final int id;
+    static final class Segment implements Serializable {
         final int footholdId;
         final int x1;
         final int y1;
         final int x2;
         final int y2;
+        final int minX;
+        final int maxX;
 
-        Region(int id, Foothold foothold) {
-            this.id = id;
+        Segment(Foothold foothold) {
             this.footholdId = foothold.getId();
             this.x1 = foothold.getX1();
             this.y1 = foothold.getY1();
             this.x2 = foothold.getX2();
             this.y2 = foothold.getY2();
+            this.minX = Math.min(x1, x2);
+            this.maxX = Math.max(x1, x2);
         }
 
-        int minX() {
-            return Math.min(x1, x2);
-        }
-
-        int maxX() {
-            return Math.max(x1, x2);
+        boolean containsX(int x) {
+            return x >= minX && x <= maxX;
         }
 
         int clampX(int x) {
-            return Math.max(minX(), Math.min(maxX(), x));
-        }
-
-        int yAt(int x) {
-            int clampedX = clampX(x);
-            if (x1 == x2) {
-                return Math.min(y1, y2);
+            if (x < minX) {
+                return minX;
             }
-
-            double ratio = (clampedX - x1) / (double) (x2 - x1);
-            return (int) Math.round(y1 + ((y2 - y1) * ratio));
+            if (x > maxX) {
+                return maxX;
+            }
+            return x;
         }
 
         Point pointAt(int x) {
             int clampedX = clampX(x);
-            return new Point(clampedX, yAt(clampedX));
+            if (x1 == x2) {
+                return new Point(clampedX, Math.min(y1, y2));
+            }
+
+            double ratio = (clampedX - x1) / (double) (x2 - x1);
+            int y = (int) Math.round(y1 + (y2 - y1) * ratio);
+            return new Point(clampedX, y);
+        }
+    }
+
+    static final class Region implements Serializable {
+        final int id;
+        final List<Segment> segments;
+        final int minX;
+        final int maxX;
+        final int minY;
+        final int maxY;
+
+        Region(int id, List<Segment> segments) {
+            if (segments.isEmpty()) {
+                throw new IllegalArgumentException("Bot nav region requires at least one segment");
+            }
+
+            this.id = id;
+            this.segments = new ArrayList<>(segments);
+
+            int regionMinX = Integer.MAX_VALUE;
+            int regionMaxX = Integer.MIN_VALUE;
+            int regionMinY = Integer.MAX_VALUE;
+            int regionMaxY = Integer.MIN_VALUE;
+            for (Segment segment : segments) {
+                regionMinX = Math.min(regionMinX, segment.minX);
+                regionMaxX = Math.max(regionMaxX, segment.maxX);
+                regionMinY = Math.min(regionMinY, Math.min(segment.y1, segment.y2));
+                regionMaxY = Math.max(regionMaxY, Math.max(segment.y1, segment.y2));
+            }
+
+            this.minX = regionMinX;
+            this.maxX = regionMaxX;
+            this.minY = regionMinY;
+            this.maxY = regionMaxY;
+        }
+
+        int width() {
+            return Math.max(0, maxX - minX);
         }
 
         Point leftPoint() {
-            return pointAt(minX());
+            return pointAt(minX);
         }
 
         Point centerPoint() {
-            return pointAt((minX() + maxX()) / 2);
+            return pointAt(minX + width() / 2);
         }
 
         Point rightPoint() {
-            return pointAt(maxX());
+            return pointAt(maxX);
+        }
+
+        Point pointAt(int x) {
+            Segment bestSegment = findBestSegment(x);
+            return bestSegment.pointAt(x);
+        }
+
+        private Segment findBestSegment(int x) {
+            Segment best = segments.get(0);
+            int bestDistance = distanceToSegment(best, x);
+            for (int i = 1; i < segments.size(); i++) {
+                Segment segment = segments.get(i);
+                int distance = distanceToSegment(segment, x);
+                if (distance < bestDistance) {
+                    best = segment;
+                    bestDistance = distance;
+                }
+            }
+            return best;
+        }
+
+        private int distanceToSegment(Segment segment, int x) {
+            if (segment.containsX(x)) {
+                return 0;
+            }
+            return x < segment.minX ? segment.minX - x : x - segment.maxX;
         }
     }
 
     static final class Edge implements Serializable {
-        @Serial
-        private static final long serialVersionUID = 1L;
-
         final int fromRegionId;
         final int toRegionId;
         final EdgeType type;
@@ -98,7 +152,14 @@ final class BotNavigationGraph implements Serializable {
         final int portalId;
         final int cost;
 
-        Edge(int fromRegionId, int toRegionId, EdgeType type, Point startPoint, Point endPoint, int launchStepX, int portalId, int cost) {
+        Edge(int fromRegionId,
+             int toRegionId,
+             EdgeType type,
+             Point startPoint,
+             Point endPoint,
+             int launchStepX,
+             int portalId,
+             int cost) {
             this.fromRegionId = fromRegionId;
             this.toRegionId = toRegionId;
             this.type = type;
@@ -125,12 +186,12 @@ final class BotNavigationGraph implements Serializable {
                        Map<Integer, List<Edge>> outgoingByRegionId) {
         this.mapId = mapId;
         this.version = version;
-        this.regions = new java.util.ArrayList<>(regions);
+        this.regions = new ArrayList<>(regions);
         this.regionsById = new HashMap<>(regionsById);
         this.regionIdByFootholdId = new HashMap<>(regionIdByFootholdId);
         this.outgoingByRegionId = new HashMap<>();
         for (Map.Entry<Integer, List<Edge>> entry : outgoingByRegionId.entrySet()) {
-            this.outgoingByRegionId.put(entry.getKey(), new java.util.ArrayList<>(entry.getValue()));
+            this.outgoingByRegionId.put(entry.getKey(), new ArrayList<>(entry.getValue()));
         }
     }
 
@@ -139,17 +200,18 @@ final class BotNavigationGraph implements Serializable {
     }
 
     List<Edge> getOutgoing(int regionId) {
-        return outgoingByRegionId.getOrDefault(regionId, Collections.emptyList());
+        return outgoingByRegionId.getOrDefault(regionId, List.of());
     }
 
     int findRegionId(MapleMap map, Point position) {
-        if (map.getFootholds() == null) {
+        if (position == null || map.getFootholds() == null) {
             return -1;
         }
 
-        Foothold foothold = map.getFootholds().findBelow(new Point(position.x, position.y - BotMovementManager.cfg.MAX_SLOPE_UP));
+        Foothold foothold = map.getFootholds().findBelow(position);
         if (foothold == null) {
-            foothold = map.getFootholds().findBelow(position);
+            Point probe = new Point(position.x, position.y - BotMovementManager.cfg.MAX_SLOPE_UP);
+            foothold = map.getFootholds().findBelow(probe);
         }
         if (foothold == null) {
             return -1;
